--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "autoprefixer": "^6.0.3",
     "babel-eslint": "^4.1.3",
     "btoa": "~1.1.2",
+    "css-mqpacker": "^4.0.0",
     "glob": "~6.0.1",
     "grunt": "~0.4.5",
     "grunt-babel": "^5.0.3",
@@ -63,6 +64,7 @@
     "markdown-it": "^5.0.0",
     "mq4-hover-shim": "^0.3.0",
     "npm-shrinkwrap": "^200.1.0",
+    "postcss-pxtorem": "^3.3.1",
     "shelljs": "^0.5.3",
     "time-grunt": "^1.2.1"
   },
